Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.9.0
-
None
Description
Some of the expr test tests were not catching NULL values being produced. The following seems to be getting converted to NULL.
cast(998 as decimal(38,0)) % cast(0.999 as decimal(38,38))
cast(0.998 as decimal(38,38)) % cast(999 as decimal(38,0))
Attachments
Issue Links
- blocks
-
IMPALA-4924 Make DECIMAL_V2 the default mode
-
- Resolved
-
- relates to
-
IMPALA-4939 DECIMAL multiply overflows early
-
- Resolved
-